Fix IonPage overlay
The overlay of IonPage was covering the entire app, avoiding the
elements to be clicked.

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,6 +11,10 @@
   --background: #fff;
 }
 
+.navbar-ion-page {
+  height: 56px;
+}
+
 .navbar-center {
   width: 85%;
   display: inline-block;
